Replaced creator with contributor in solr JSONs. When rightsAttribute has mutiple values, only output one into the solr JSON, and then only if it is ic, pd or und.

--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,6 @@ viaf_index*
 /bibframe2ef/fixDates.py
 /bibframe2ef/fixSolr.js
 /bibframe2ef/fixSolr.py
+/bibframe2ef/checkIngested.py
 /bibframe2ef/node_modules*
 /ic_az*
