XSL: Finished pubPlace, fixed mainEntityOfPage.  Updated SPARQL query and JS that calls it to work with updated context document. Added method for searching through the bibframe files to find a specific work.

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,5 @@ viaf_index*
 /bibframe2ef/fixSolr.py
 /bibframe2ef/checkIngested.py
 /bibframe2ef/node_modules*
+/bibframe2ef/framing-compacting-example*
 /ic_az*
